           * added 'sstanom' colormap from
             http://www.ghrsst-pp.org/GHRSST-PP-Data-Tools.html
version 0.9.7 (svn revision 4422)
           * fixed bug in drawlsmask for 'moll','robin' and 'sinu'
             projections.
           * added lake_color keyword to fillcontinents.
           * fixed a bug in the 'tmerc' projection.
           * added pure python NetCDFFile reader from Roberto De Almeida 
             to basemap namespace
             (from matplotlib.toolkits.basemap import NetCDFFile).
           * added support for full-resolution boundaries (will be
             a separate download).  Full-res files (totaling around
             100 mb) available in SVN.
           * high-resolution boundaries now included.
           * postpone processing of countries, states and river
             boundaries until a draw is requested. Only the
             coastlines are processed in __init__.
           * use a Pyrex/Cython interface to the GEOS library
             (http://geos.refractions.net - LGPL license)
             to find geometries that are within map projection region.
             This speeds up instance creation for small map regions and
             high resolution coastlines. Boundary datasets now in binary
             format (I/O is faster). Requires GEOS version 2.2.3, source
             code included.
           * remove all numerix imports.
           * fix rotate_vector so it works in S. Hem and for non-orthogonal
             grids. Support for masked velocity vectors also added. (EF)
           * numpification. (EF)
version 0.9.6 (svn revision 3888)
           * fix addcyclic function so it handles masked arrays.
           * labelling of meridians and parallels now works with
             very small map regions (less than 0.2 degrees square).
           * Subregions of the globe may be specified with llcrnrlat,
             llcrnrlon,urcrnrlat,urcrnrlon keywords for 'ortho' and 'geos'.