@@ -23,11 +23,11 @@ title('Orthographic Map Centered on Lon=%s, Lat=%s' % (lon_0,lat_0))
 fig = figure()
 m = Basemap(projection='ortho',lon_0=lon_0,lat_0=lat_0,resolution='l')
 m.drawcoastlines()
-m.fillcontinents(color='coral')
+m.fillcontinents(color='coral',lake_color='aqua')
 m.drawcountries()
 # draw parallels and meridians.
 m.drawparallels(arange(-90.,120.,30.))
 m.drawmeridians(arange(0.,420.,60.))
-m.drawmapboundary()
+m.drawmapboundary(fill_color='aqua')
 title('Orthographic Map Centered on Lon=%s, Lat=%s' % (lon_0,lat_0))
 show()
